--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "remap-istanbul": "^0.9.1",
     "rimraf": "^2.6.1",
     "should": "^11.2.0",
+    "sinon": "^2.1.0",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
